@@ -1,0 +1,27 @@
+/*******************************************************************************
+ * Copyright (c) 2023 Obeo.
+ * This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License v2.0
+ * which accompanies this distribution, and is available at
+ * https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
+ *
+ * Contributors:
+ *     Obeo - initial API and implementation
+ *******************************************************************************/
+package org.eclipse.sirius.components.diagrams.layout.experimental;
+
+import java.util.Map;
+import java.util.Objects;
+
+/**
+ * Internal data structure of the layout algorithm used to hold the box model.
+ *
+ * @author sbegaudeau
+ */
+public record DiagramBoxModel(Map<String, NodeBoxModel> nodeBoxModels) {
+    public DiagramBoxModel {
+        Objects.requireNonNull(nodeBoxModels);
+    }
+}
